#303 added input box for follower count

--- a/app/styles/_wall.scss
+++ b/app/styles/_wall.scss
@@ -28,9 +28,9 @@
     border-radius: 5%;
 }
 
-.wall-toggle-switch {
+.toggle-switch {
     border-radius: 2px;
-    border-color: #A79E9E;
+    border-color: #CABFBF !important;
     vertical-align: middle;
 }
 
