Fixes #262 Trends section is created into the sidebar

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -34,7 +34,9 @@
                 <h3 class="trend-title">Trends</h3>
                 <ul id="home-trend-list">
                     <li><a href="./search?q=%23loklak">#loklak</a></li>
-                    <a ng-click="root.getHashtagTrends()" class="btn btn-primary">GetHashtags</a>
+                    <li ng-repeat="(key, value) in root.trends">
+                        <a href="./search?q=%23{{key}}">#{{key}}</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -67,7 +69,11 @@
                 <h3 class="trend-title">Trends</h3>
                 <ul id="home-trend-list">
                     <li><a href="./search?q=%23loklak">#loklak</a></li>
-                    <a ng-click="root.getHashtagTrends()" class="btn btn-primary">GetHashtags</a>
+                    <li ng-repeat="(key, value) in root.trends">
+                        <!-- -->
+                        <a href="./search?q=%23{{key}}">#{{key}}</a>
+                        <!-- -->
+                    </li>
                 </ul>
             </div>
         </div>
