--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -11,16 +11,15 @@
     </style>
 </style>
 
-   <div id="map">
-
-   </div>
-    <div id="docDrawer" class="drawer dw-xs-6 dw-sm-6 dw-md-5 fold in" aria-labelledby="docDrawer">
-        <div class="drawer-controls pull-right" style="z-index:-888; top:120px;">
+   <div id="map" class="has-inner-drawer" style="padding-top:10%;">
+ <div id="docDrawer" class="drawer dw-xs-3 dw-sm-3 dw-md-3 fold in drawer" style="height:100%; z-index:+88899;" aria-labelledby="docDrawer">
+        <div class="drawer-controls pull-right" style="z-index:+888; top:120px;">
             <a href="#docDrawer" data-toggle="drawer" href="#docDrawer" aria-foldedopen="false" aria-controls="docDrawer" class="btn btn-default"><i class="fa fa-align-justify"></i></a>
         </div>
         <div class="drawer-contents">
+          <h3>Followers</h3><hr>
             <div style="height:50%; overflow-y:scroll;">
-           <h3>Followers</h3><hr>
+           
 
            <li ng-repeat="follower in followers">
             <div class="home-user-info" style="width:100%;">
@@ -53,10 +52,47 @@
             
         <hr>
     </div>
+    <h3>Following</h3><hr>
+    <div style="height:50%; overflow-y:scroll;">
+           
+
+           <li ng-repeat="following in following">
+            <div class="home-user-info" style="width:100%;">
+            <div class="blue-background-placeholder">
+            <img src="{{following.profile_banner}}" >
+            </div>
+            <div class="home-user-info-content">
+            <div class="top-content">
+             <img src="{{following.propic}}">
+            <div class="name-and-screen-name">
+            <span class="home-user-name">{{following.name}}</span><br>
+            <span class="home-user-screen-name">@{{following.screenname}}</span>
+                        </div>
+                   </div>
+                   <div class="bottom-content">
+                        <div class="user-no-tweets">
+                        <a href="">Tweets<br><span>{{following.tweetcount}}</span></a>
+                        </div>
+                        <div class="user-no-followings">
+                            <a href="">Followings<br><span>{{following.following}}</span></a>
+                       </div>
+                      <div class="user-no-followers">
+                            <a href="">Followers<br><span>{{following.followers}}</span></a>
+                       </div>
+                    </div>
+                </div>
+            </div>
+            {{preview}}
+             </li>
+            
+        <hr>
+    </div>
     </div>
            Followers Info shall come here<br><br><br><br><hr>
            <h3>Following </h3><br>Following Info shall comehere 
         </div>
+   </div>
+   
     </div>
     </div>
   <script>
