Includes stats about number of followers/following

--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -6,7 +6,7 @@
         }
         html, body, #map {
              
-            height: 100vh;
+            height: 92vh;
             width: 100%;
         }
     </style>
@@ -15,13 +15,15 @@
    <div id="map" >
  
     </div>
-    <div id="docDrawer" class="drawer dw-xs-3 dw-sm-3 dw-md-3 fold in drawer-right"  style="margin-top:10%; z-index:+889;" aria-labelledby="docDrawer">
+    <div id="docDrawer" class="drawer dw-xs-3 dw-sm-3 dw-md-3 fold in drawer-right"  style="margin-top:10%; height:540px; z-index:+889;" aria-labelledby="docDrawer">
         <div class="drawer-controls" style="z-index:+888; top:100px;">
             <a href="#docDrawer" data-toggle="drawer" href="#docDrawer" aria-foldedopen="false" aria-controls="docDrawer" class="btn btn-default"><i class="fa fa-align-justify"></i></a>
         </div>
         <div class="drawer-contents">
-          <h3>Followers</h3><hr>
-            <div style="height:200px; overflow-y:scroll;">
+          <ul class="nav nav-pills" role="tablist">
+          <li role="presentation" class="active"><a href="#">Followers <span class="badge">{{followers_count}}</span></a></li>
+        </ul>
+            <div style="height:220px; overflow-y:scroll;">
            
 
            <li ng-repeat="follower in followers">
@@ -53,8 +55,10 @@
             
              </li>
     </div>
-    <h3>Following</h3>
-    <div style="height:200px; overflow-y:scroll;">
+   <ul class="nav nav-pills" role="tablist">
+          <li role="presentation" class="active"><a href="#">Following <span class="badge">{{following_count}}</span></a></li>
+        </ul>
+    <div style="height:220px; overflow-y:scroll;">
            
 
            <li ng-repeat="following in following">
